# Agent-AI-Task

./: .env.example  README.md  explainability_audit_report.json  mcp_agent_log.db
agent_client/: pyproject.toml
agent_client/src/agent_client/: main.py  mcp_client.py
analysis_dashboard/src/analysis_dashboard/: app.py
mcp_server/: pyproject.toml
mcp_server/src/mcp_server/: server.py
screenshots/: README.md
