[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "agent-client"
version         = "0.1.0"
description     = "Stage 4 Resilient MCP Client — create_agent + RunnableWithRetry/Fallbacks, vector-logged"
requires-python = ">=3.11"
dependencies    = [
    "fastmcp>=2.3.4",
    "langchain>=1.0",
    "langchain-community>=0.3",
    "langchain-core>=1.0",
    "langchain-groq>=0.2",
    "langsmith>=0.2",
    "pydantic>=2.8.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "fastembed>=0.8.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
# uv run --package agent-client agent-client
agent-client = "agent_client.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_client"]
